--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "discorduser-colorsee",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "ColorSee.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -10,6 +10,7 @@
 	"description": "",
 	"dependencies": {
 		"@napi-rs/canvas": "^0.1.55",
-		"discord.js": "^14.16.1"
+		"discord.js": "^14.16.1",
+		"pm2": "^5.4.2"
 	}
 }
